# terraneo

./: README.md
apps/benchmarks/performance/: benchmark_operators.cpp
apps/mantlecirculation/: mantlecirculation.cpp
apps/mantlecirculation/src/: parameters.hpp
apps/tools/: CMakeLists.txt  visualize_lookup_table_2d.cpp
doc/doxygen_and_pages/: DoxygenLayout.xml
doc/doxygen_and_pages/documentation/cluster-setup/: LUMI-G.md  cluster-setup.md
doc/doxygen_and_pages/documentation/framework/: 01_model_pde.md  11_input_output.md  12_advection_diffusion.md  12_mantle_circulation_app.md  13_stokes.md  framework.md
doc/epsdivdiv_benchmarks/: epsdivdiv_history_explained.md  epsdivdiv_optimization_history.md  ncu_data.csv  plot_roofline.py  throughput_data.csv
doc/freeslip/: plot_crosscut_streamlines.py
src/terra/: CMakeLists.txt
src/terra/communication/: buffer_copy_kernels.hpp
src/terra/communication/shell/: CMakeLists.txt  communication.hpp  communication_plan.hpp  fv_communication.hpp
src/terra/fe/: strong_algebraic_dirichlet_enforcement.hpp
src/terra/fe/wedge/: integrands.hpp
src/terra/fe/wedge/linearforms/shell/: inv_rho_drho_dt.hpp  inv_rho_grad_rho_dot_u.hpp
src/terra/fe/wedge/operators/shell/: divergence.hpp  epsilon_divdiv.hpp  epsilon_divdiv_kerngen.hpp  epsilon_divdiv_simple.hpp  gradient.hpp  unsteady_advection_diffusion_supg.hpp
src/terra/fe/wedge/operators/shell/performance_history/: epsilon_divdiv_kerngen_v01_initial.hpp  epsilon_divdiv_kerngen_v02_split_dimij.hpp  epsilon_divdiv_kerngen_v03_teams_precomp.hpp  epsilon_divdiv_kerngen_v04_shmem_coords.hpp  epsilon_divdiv_kerngen_v05_shmem_src_k.hpp  epsilon_divdiv_kerngen_v06_xy_tiling.hpp  epsilon_divdiv_kerngen_v07_split_paths.hpp  epsilon_divdiv_kerngen_v08_scalar_coalesced.hpp  epsilon_divdiv_kerngen_v09_separate_scatter.hpp  epsilon_divdiv_kerngen_v10_seq_rpasses.hpp
src/terra/fv/hex/: CMakeLists.txt  conversion.hpp  helpers.hpp
src/terra/fv/hex/operators/: advection_diffusion.hpp  fct_advection_diffusion.hpp  geometry_helper.hpp  mass.hpp
src/terra/grid/: grid_types.hpp
src/terra/grid/shell/: spherical_shell.hpp
src/terra/io/: CMakeLists.txt  lookup_table_2d_reader.hpp  xdmf.hpp
src/terra/kernels/common/: grid_operations.hpp
src/terra/linalg/: vector.hpp  vector_fv.hpp  vector_q1.hpp  vector_q1isoq2_q1.hpp
src/terra/linalg/solvers/: chebyshev.hpp  fgmres.hpp
src/terra/linalg/solvers/gca/: gca.hpp  gca_elements_collector.hpp
src/terra/mpi/: mpi.hpp
src/terra/util/: timer.hpp
tests/: CMakeLists.txt  test_epsilon_divdiv_cg.cpp  test_epsilon_divdiv_freeslip_fast_vs_slow.cpp  test_epsilon_divdiv_stokes.cpp  test_epsilon_divdiv_stokes_assess.cpp  test_epsilon_divdiv_stokes_assess_freeslip.cpp  test_epsilon_divdiv_stokes_assess_freeslip_freeslip.cpp  test_epsilon_divdiv_stokes_compressible_simple.cpp  test_fct_diffusion.cpp  test_finite_volume_basics.cpp  test_finite_volume_rotation.cpp  test_laplace_cg_subdomains.cpp  test_supg_rotation.cpp
