function(add_terra_tool name)
    add_executable(${name} ${name}.cpp)
    if (MPI_FOUND)
        target_link_libraries(${name} terra MPI::MPI_CXX)
    else ()
        target_link_libraries(${name} terra)
    endif ()
    target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/src)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

add_terra_tool(read_checkpoint)
add_terra_tool(visualize_lookup_table_2d)
add_terra_tool(visualize_radial_profile)
add_terra_tool(visualize_spherical_harmonics)
add_terra_tool(visualize_thick_spherical_shell_mesh)